--- a/src/component/card/card.styles.css
+++ b/src/component/card/card.styles.css
@@ -1,4 +1,11 @@
-.card-image{
+/* .card-image{
     width: 20rem;
     height: 15rem;
+} */
+/* .card-container{
+    width: 20rem;
+    
 }
+.content{
+    display: inline-block;
+} */
