--- a/src/pages/rent/rent.styles.css
+++ b/src/pages/rent/rent.styles.css
@@ -38,8 +38,16 @@ background-color: aliceblue;
 .filter{
     background-color: white;
     display: inline-block;
-    margin: 2rem;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+    margin-left:4.5rem;
+    margin-right:4.5rem;
 
+}
+.filter h3{
+    margin-top: 0;
+    margin-bottom: 7px; 
+    background-color: white;
 }
 .filter-title{
     padding-bottom: 0px;
@@ -47,7 +55,9 @@ background-color: aliceblue;
 .btn-filter-div{
     background-color: white;
     display: inline-block;
-    padding-left: 32rem;
+    padding-left: 2.5rem;
+    position:relative;
+    bottom:1rem;
     margin: 0;
 }
 .btn-filter{
