--- a/src/pages/rent/rent.styles.css
+++ b/src/pages/rent/rent.styles.css
@@ -34,28 +34,40 @@ background-color: aliceblue;
 
 .all-filters{
     background-color: white;
+
+    /* text-align: center; */
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-bottom: -10px;
+    margin-top: 0.5rem;
+    padding-top: 0.5rem;
+    border-radius: 8px;
 }
 .filter{
+    color: grey;
     background-color: white;
     display: inline-block;
-    margin-top: 1.5rem;
-    margin-bottom: 1.5rem;
-    margin-left:4.5rem;
-    margin-right:4.5rem;
+    margin-top: 1rem;
+    margin-bottom: 1.2rem;
+    margin-left:4rem;
+    margin-right:3.5rem;
 
 }
 .filter h3{
     margin-top: 0;
-    margin-bottom: 7px; 
+    margin-bottom: -3px; 
+    
     background-color: white;
 }
 .filter-title{
     padding-bottom: 0px;
+    
 }
 .btn-filter-div{
     background-color: white;
     display: inline-block;
-    padding-left: 2.5rem;
+    padding-left: 1rem;
     position:relative;
     bottom:1rem;
     margin: 0;
@@ -63,7 +75,7 @@ background-color: aliceblue;
 .btn-filter{
     /* background-color: white; */
     display: inline-block;
-    /* margin: 1rem; */
+    margin-right: 1.1rem;
     padding-right: 2rem;
     padding-left: 2rem;
     padding-top: 1rem;
